--- a/geolab/index.html
+++ b/geolab/index.html
@@ -11,14 +11,16 @@
       <meta property="og:title"              content="When Great Minds Don’t Think Alike" />
       <meta property="og:description"        content="How much does culture influence creative thinking?" />
       <meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+
+
       <title>geolab</title>
    </head>
    <body>
       <header class="header">
-         <!-- for activation of burger-menu you must add active class to this tag -->
-         <div class="burger-menu">
-            <!-- for activation of burger you must add active class to this tag -->
-            <div class="burger">
+
+         <div class="burger-menu " id="burger-menu" >
+
+            <div class="burger " id="burger" >
                <span class="burger1"></span>
                <span class="burger2"></span>
                <span class="burger3"></span>
@@ -272,5 +274,8 @@
          created by: tornike pkhaladze
          </span>
       </div>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script type="text/javascript" src="js/script.js" >
+      </script>
    </body>
 </html>
