--- a/sec/index.html
+++ b/sec/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/font.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+  <meta property="og:url"                content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
+      <meta property="og:type"               content="article" />
+      <meta property="og:title"              content="When Great Minds Don’t Think Alike" />
+      <meta property="og:description"        content="How much does culture influence creative thinking?" />
+      <meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
 	<title>Geolab</title>
 </head>
 <body>
@@ -350,7 +355,6 @@
     </section>
 
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/      jquery/3.3.1/jquery.min.js"></script>
-      <script type="text/javascript" src="js/script.js" >
-      </script>
+      <script type="text/javascript" src="js/script.js" ></script>
 </body>
 </html>
