--- a/sec/index.html
+++ b/sec/index.html
@@ -354,7 +354,7 @@
       </div>
     </section>
 
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/      jquery/3.3.1/jquery.min.js"></script>
+      <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/      jquery/3.3.1/jquery.min.js"></script> -->
       <script type="text/javascript" src="js/script.js" ></script>
 </body>
 </html>
