--- a/sec/index.html
+++ b/sec/index.html
@@ -60,8 +60,8 @@
           <!-- for activation of burger you have to add active class to inside-burger tag-->
 
 
-              <div class="burger">
-              	  <div class="inside-burger  flex">
+              <div class="burger" >
+              	  <div class="inside-burger flex" id="burger">
               	  	  <span class=" rows burger1"></span>
               	  	  <span class=" rows burger2"></span>
               	  	  <span class=" rows burger3"></span>
@@ -71,7 +71,7 @@
 
        <!-- for activation of burger-menu you have to add active class to burger-menu tag -->
 
-        <div class="burger-menu  flex ">
+        <div class="burger-menu  flex " id="burger-menu">
         	<div class=" burger-menu-child ">
         		<ul>
         			<li class="burger-menu-list">
