--- a/geolab/index.html
+++ b/geolab/index.html
@@ -11,16 +11,13 @@
       <meta property="og:title"              content="When Great Minds Don’t Think Alike" />
       <meta property="og:description"        content="How much does culture influence creative thinking?" />
       <meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
-
-
       <title>geolab</title>
    </head>
    <body>
       <header class="header">
-
-         <div class="burger-menu " id="burger-menu" >
-
-            <div class="burger " id="burger" >
+        
+         <div class="burger-menu" id="burger-menu">
+            <div class="burger" id="burger">
                <span class="burger1"></span>
                <span class="burger2"></span>
                <span class="burger3"></span>
@@ -30,24 +27,24 @@
             </div>
             <ul class="burger-list">
                <li >
-                  <a class="burger-lists" href="#">
+                  <a class="burger-lists"  href="#banner">
                   HOME
                   </a>
                </li>
                <li >
-                  <a class="burger-lists" href="#">
+                  <a class="burger-lists" href="#collection">
                   SERVICES
                   </a>
                </li>
                <li >
-                  <a class="burger-lists" href="#">
+                  <a class="burger-lists" href="#contact">
                   CONTACT
                   </a>
                </li>
             </ul>
          </div>
       </header>
-      <section class="banner">
+      <section class="banner js-section " id="banner">
          <div class="banner-child">
             <img class="banner-img" src="img/banner.svg" alt="banner">
             <div class="banner-circles">
@@ -90,7 +87,7 @@
          <h1 class="colection-title">
             The corner garage for collector cars
          </h1>
-         <div class="colection-item">
+         <div class="colection-item js-section" id="collection">
             <article class="colection-items">
                <img src="img/modify.svg" alt="modify">
                <h2>
@@ -156,7 +153,7 @@
                   </ul>
                </div>
             </div>
-            <div class="touch flex">
+            <div class="touch flex js-section" id="contact">
                <div class="form">
                   <h1 class="touch-title">
                      GET IN TOUCH
@@ -274,8 +271,10 @@
          created by: tornike pkhaladze
          </span>
       </div>
+
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script type="text/javascript" src="js/script.js" >
       </script>
+
    </body>
 </html>
