--- a/geolab/index.html
+++ b/geolab/index.html
@@ -158,20 +158,20 @@
    <h1 class="touch-title">
                      GET IN TOUCH
     </h1>
-            <form  method="get" onsubmit="return singup()">
-               <div class="form-group">
-                 <input type="text" class="fname" name="firstname" placeholder=" >
+                 <form  method="get" onsubmit="return singup()">
+                    <div class="form-group">
+                      <input type="text" class="fname" name="firstname" placeholder=" Name">
+                      
+                      <input type="text" class="subject" name="lastname" placeholder=" subject">
 
-                 <input type="text" class="subject" name="lastname" placeholdsubject">
+                      <input type="email" class="email" name="email" placeholder=" E-mail">
 
-                 <input type="email" class="email" name="email" placeholder=" E-mail">
-
-                 <textarea name="query" class="query" rows="5" cols="15" placeholdtext"></textarea>
-                          <p class="emsgb"></p>
-                <input type="submit" name="submit" value="send">
-               </div>
-           </form>
-             </div>
+                      <textarea name="query" class="query" rows="5" cols="15" placeholder=" text"></textarea>
+                               <p class="emsgb"></p>
+                     <input type="submit" name="submit" value="send">
+                    </div>
+                </form>
+</div>
                <div class="chekboxes">
                   <div class="redio-chechbox flex">
                      <label class="container">
