--- a/geolab/index.html
+++ b/geolab/index.html
@@ -23,7 +23,7 @@
                <span class="burger3"></span>
             </div>
             <div class="logo">
-               <div class="logo-img"></div>
+               <a class="logo-img" href="index.html"></a>
             </div>
             <ul class="burger-list">
                <li >
