--- a/asigne/index.html
+++ b/asigne/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>work</title>
     <link rel="stylesheet" href="style/style.css" />
 </head>
@@ -142,24 +144,24 @@
                 <div class="mySlides fade">
                     <img src="img/Layer 3 copy.png" style="width:100%">
                     <div class="over-banner">
-                            <h1>TPL <span>INSURANCE</span></h1>
-                            <span>პოლისის შეძენის პორტალი ინდივიდუალური პირებისთვის</span>  
+                            <h1>TPL <span class="next">INSURANCE</span></h1>
+                            <span class="down-text">პოლისის შეძენის პორტალი ინდივიდუალური პირებისთვის</span>  
                     </div>
                 </div>
 
                 <div class="mySlides fade">
                     <img src="img/Layer 4 copy.png" style="width:100%">
                     <div class="over-banner">
-                            <h1>TPL <span>INSURANCE</span></h1>
-                            <span>პოლისის შეძენის პორტალი ინდივიდუალური პირებისთვის</span>  
+                            <h1>TPL <span class="next">INSURANCE</span></h1>
+                            <span class="down-text">პოლისის შეძენის პორტალი ინდივიდუალური პირებისთვის</span>  
                     </div>
                 </div>
 
                 <div class="mySlides fade">
                     <img src="img/Layer 13 copy.png" style="width:100%">
                     <div class="over-banner">
-                            <h1>TPL <span>INSURANCE</span></h1>
-                            <span>პოლისის შეძენის პორტალი ინდივიდუალური პირებისთვის</span>  
+                            <h1>TPL <span class="next">INSURANCE</span></h1>
+                            <span class="down-text">პოლისის შეძენის პორტალი ინდივიდუალური პირებისთვის</span>  
                     </div>
                 </div>
             </div>
@@ -281,6 +283,7 @@
                     შესვლა
                 </a>
             </div>
+            <img class="img" src="img/computer.svg">
         </div>
         <div class="right-agents"></div>
         </div>
