--- a/asigen/index.html
+++ b/asigen/index.html
@@ -96,35 +96,38 @@
         <div class="burger-menu  flex " id="burger-menu">
             <div class=" burger-menu-child ">
                 <ul class="ul">
-                    <li class="burger-menu-list">
-                        <a class="burger-menu-a" href="#">
-                            მთავარი
+                    <li class="list">
+                        <a class="a" href="#">
+                            წესები და პირობები
                         </a>
                     </li>
 
-                    <li class="burger-menu-list">
-                        <a class="burger-menu-a" href="#">
-                            რას ვაკეთებ
+                    <li class="list">
+                        <a class="a" href="#">
+                            გაყიდვის-წერტილები
                         </a>
                     </li>
 
-                    <li class="burger-menu-list">
-                        <a class="burger-menu-a" href="#">
-                            ნამუშევრები
+                    <li class="list">
+                        <a class="a" href="#">
+                            ჩვენს შესახებ
                         </a>
                     </li>
 
-                    <li class="burger-menu-list">
-                        <a class="burger-menu-a" href="#">
-                            ჩემ შესახებ
+                    <li class="list">
+                        <a class="a" href="#">
+                            FAQ
                         </a>
                     </li>
 
-                    <li class="burger-menu-list">
-                        <a class="burger-menu-a" href="#">
+                    <li class="list">
+                        <a class="a" href="#">
                             კონტაქი
                         </a>
                     </li>
+                    <div class=finder2>
+                            <input type="text" placeholder="მოძებნე შენი პოლისი">
+                    </div>
                 </ul>
             </div>
         </div>
