--- a/asigne/index.html
+++ b/asigne/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>work</title>
     <link rel="stylesheet" href="style/style.css" />
 </head>
@@ -126,7 +127,7 @@
                         </a>
                     </li>
                     <div class=finder2>
-                            <input type="text" placeholder="მოძებნე შენი პოლისი">
+                        <input type="text" placeholder="მოძებნე შენი პოლისი">
                     </div>
                 </ul>
             </div>
@@ -137,34 +138,34 @@
             <div class="slideshow-container">
 
                 <div class="mySlides fade">
-                    <img src="img/baner.svg" style="width:100%"> 
+                    <img src="img/baner.svg" style="width:100%">
                     <div class="over-banner">
-                            <h1>TPL <span class="next">INSURANCE</span></h1>
-                            <span class="down-text" >პოლისის შეძენის პორტალი ინდივიდუალური პირებისთვის</span>  
+                        <h1>TPL <span class="next">INSURANCE</span></h1>
+                        <span class="down-text">პოლისის შეძენის პორტალი ინდივიდუალური პირებისთვის</span>
                     </div>
                 </div>
 
                 <div class="mySlides fade">
                     <img src="img/Layer 3 copy.png" style="width:100%">
                     <div class="over-banner">
-                            <h1>TPL <span class="next">INSURANCE</span></h1>
-                            <span class="down-text">პოლისის შეძენის პორტალი ინდივიდუალური პირებისთვის</span>  
+                        <h1>TPL <span class="next">INSURANCE</span></h1>
+                        <span class="down-text">პოლისის შეძენის პორტალი ინდივიდუალური პირებისთვის</span>
                     </div>
                 </div>
 
                 <div class="mySlides fade">
                     <img src="img/Layer 4 copy.png" style="width:100%">
                     <div class="over-banner">
-                            <h1>TPL <span class="next">INSURANCE</span></h1>
-                            <span class="down-text">პოლისის შეძენის პორტალი ინდივიდუალური პირებისთვის</span>  
+                        <h1>TPL <span class="next">INSURANCE</span></h1>
+                        <span class="down-text">პოლისის შეძენის პორტალი ინდივიდუალური პირებისთვის</span>
                     </div>
                 </div>
 
                 <div class="mySlides fade">
                     <img src="img/Layer 13 copy.png" style="width:100%">
                     <div class="over-banner">
-                            <h1>TPL <span class="next">INSURANCE</span></h1>
-                            <span class="down-text">პოლისის შეძენის პორტალი ინდივიდუალური პირებისთვის</span>  
+                        <h1>TPL <span class="next">INSURANCE</span></h1>
+                        <span class="down-text">პოლისის შეძენის პორტალი ინდივიდუალური პირებისთვის</span>
                     </div>
                 </div>
             </div>
@@ -219,6 +220,62 @@
                             </div>
                         </div>
                     </div>
+                </div>
+
+
+            </div>
+            <div class="banner-bottom">
+                <div class="left">
+
+                    <ul class="up" id="ul">
+                        <li class="list btn">
+                            <div class="msubuqi cars">
+                            </div>
+                            <span class="under-cars">მსუბუქი</span>
+                        </li>
+                        <li class="list  btn">
+                            <div class="satvirto cars">
+                            </div>
+                            <span class="under-cars">სატვირთო</span>
+                        </li>
+                        <li class="list btn">
+                            <div class="spec cars">
+                            </div>
+                            <span class="under-cars">სპეც.ტექნიკა</span>
+                        </li>
+                        <li class="list btn">
+                            <div class="avtobusi cars"> </div>
+                            <span class="under-cars">ავტობუსი</span>
+
+                        </li>
+                        <li class="list btn">
+                            <div class="moto cars">
+                            </div>
+                            <span class="under-cars">მოტოციკლი</span>
+                        </li class="list btn">
+
+                        <li class="list btn">
+                            <div class="misabmeli cars">
+                            </div>
+                            <span class="under-cars">მისაბმდღე</span>
+                        </li>
+                    </ul>
+                    <div class="down">
+                        <ul class="row" id="uli">
+                            <li class="btns">15 დღე</li>
+                            <li class="btns active">30 დღე</li>
+                            <li class="btns">90 დღე</li>
+                            <li class="btns">1 წელი</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="right">
+                    <span class="f75">75.00</span>
+                    <span class="c-satvirto">სატვირთო</span>
+                    <span class="kategory">კატეგორია</span>
+                    <span class="day-30">30დღე</span>
+                    <a href="#" class="last">ყიდვა</a>
+
                 </div>
             </div>
     </section>
@@ -278,17 +335,22 @@
         <div class="portal ">
             <div class="left-agents">
                 <div class="for-bq">
-                <h1 class="title">პორტალი<span>აგენტებისთვის</span></h1>
-                <p class="text">
-                        საქართველოში არ ვიცით, რას გრძნობს ადამიანი, როდესაც ნობელის პრემიას ანიჭებენ – საქართველოს არ ჰყავს ნობელიატი, მაგრამ ვიცი, როგორი იყო რეაქცია ბელორუსში. როგორი იყო პირადად თქვენი რეაქცია? მე მაგალითად, ისე მიხაროდა, თითქოს ეს პრემია ყველამ ერთად მივიღეთ, ყოფილმა წითელმა ადამიანებმა, ან იმ ხალხმა, ვისაც არ უნდოდა, წითელი ყოფილიყო. საქართველოში არ ვიცით, რას გრძნობს ადამიანი, როდესაც ნობელის პრემიას ანიჭებენ – საქართველოს არ ჰყავს ნობელიატი, მაგრამ ვიცი, როგორი იყო რეაქცია ბელორუსში. 
-                </p>
-                <a href="" class="get-in">
-                    შესვლა
-                </a>
+                    <h1 class="title">პორტალი<span>აგენტებისთვის</span></h1>
+                    <p class="text">
+                        საქართველოში არ ვიცით, რას გრძნობს ადამიანი, როდესაც ნობელის პრემიას ანიჭებენ – საქართველოს არ
+                        ჰყავს ნობელიატი, მაგრამ ვიცი, როგორი იყო რეაქცია ბელორუსში. როგორი იყო პირადად თქვენი რეაქცია?
+                        მე მაგალითად, ისე მიხაროდა, თითქოს ეს პრემია ყველამ ერთად მივიღეთ, ყოფილმა წითელმა ადამიანებმა,
+                        ან იმ ხალხმა, ვისაც არ უნდოდა, წითელი ყოფილიყო. საქართველოში არ ვიცით, რას გრძნობს ადამიანი,
+                        როდესაც ნობელის პრემიას ანიჭებენ – საქართველოს არ ჰყავს ნობელიატი, მაგრამ ვიცი, როგორი იყო
+                        რეაქცია ბელორუსში.
+                    </p>
+                    <a href="" class="get-in">
+                        შესვლა
+                    </a>
+                </div>
+                <img class="img" src="img/computer.svg">
             </div>
-            <img class="img" src="img/computer.svg">
-        </div>
-        <div class="right-agents"></div>
+            <div class="right-agents"></div>
         </div>
     </section>
 
