--- a/asigne/index.html
+++ b/asigne/index.html
@@ -283,7 +283,8 @@
                 </div>
                 <div class="right">
                     <span class="f75">75.00</span>
-                    <span class="c-satvirto">სატვირთო</span>
+                    <span class="c-satvirto">სატვირთო<i class="fa fa-info-circle" aria-hidden="true"></i>
+                    </span>
                     <span class="kategory">კატეგორია</span>
                     <span class="day-30"><i class="fa fa-shopping-bag" aria-hidden="true"></i>
                         30დღე</span>
