--- a/asigne/index.html
+++ b/asigne/index.html
@@ -46,7 +46,8 @@
                             </li>
                             <a href="#">ENGLISH</a>  
                         </ul>
-                        <img class="drop-icon" src="img/language-icon.svg">
+                        <i class="fa fa-arrow-down" aria-hidden="true"></i>
+
                     </div>
                 </div>
             </div>
