--- a/asigne/index.html
+++ b/asigne/index.html
@@ -33,21 +33,18 @@
                 </ul>
                 <div class="right-block">
                     <div class="dropdown">
-                        <div class="dropbtn">ENGLISH</div>
-                        <ul class="dropdown-content">
+                        <div class="dropbtn">ENGLISH <i class="fa arrow-icon fa-arrow-down" aria-hidden="true"></i></div>
+                        <div class="dropdown-content">
                             <li>
-                                    <a href="#">ENGLISH</a>
-                            </li>
-                            <li>
-                                    <a href="#">ქართული</a>
-                            </li>
-                            <li>
-                                    <a href="#">RUSSIAN</a>
-                            </li>
-                            <a href="#">ENGLISH</a>  
-                        </ul>
-                        <i class="fa fa-arrow-down" aria-hidden="true"></i>
-
+                                   <a href="#">ENGLISH</a>
+                           </li>
+                           <li>
+                                   <a href="#">ქართული</a>
+                           </li>
+                           <li>
+                                   <a href="#">RUSSIAN</a>
+                           </li>
+                       </div>
                     </div>
                 </div>
             </div>
@@ -204,8 +201,8 @@
                             </div>
                             <div class="name">thor </div>
                             <div class="icons">
-                                <i class="fas fa-phone"></i>
-                                <i class="fas fa-video"></i>
+                                <i class="fa fa-phone" aria-hidden="true"></i>
+                                <i class="fa fa-video-camera" aria-hidden="true"></i>
                             </div>
                             <div class="menu">
                                 <div class="dok"></div>
@@ -229,7 +226,7 @@
                         <div class="bottom-bar">
                             <div class="chat">
                                 <input type="text" placeholder="Type a message..." />
-                                <button type="submit"><i class="fas fa-paper-plane"></i></button>
+                                <button type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
                             </div>
                         </div>
                     </div>
@@ -283,7 +280,7 @@
                     </div>
                 </div>
                 <div class="right">
-                    <span class="f75">75.00</span>
+                    <span class="f75">75.00 <i class="fa fa-usd" aria-hidden="true"></i></span>
                     <span class="c-satvirto">სატვირთო<i class="fa fa-info-circle" aria-hidden="true"></i>
                     </span>
                     <span class="kategory">კატეგორია</span>
