--- a/asigne/index.html
+++ b/asigne/index.html
@@ -32,7 +32,7 @@
                     </li>
                 </ul>
                 <div class="right-block">
-                    <div class="dropdown">
+                    <ul class="dropdown">
                         <div class="dropbtn">ENGLISH <i class="fa arrow-icon fa-arrow-down" aria-hidden="true"></i></div>
                         <div class="dropdown-content">
                             <li>
@@ -45,7 +45,7 @@
                                    <a href="#">RUSSIAN</a>
                            </li>
                        </div>
-                    </div>
+                    </ul>
                 </div>
             </div>
         </div>
