--- a/asigne/index.html
+++ b/asigne/index.html
@@ -32,9 +32,9 @@
                     </li>
                 </ul>
                 <div class="right-block">
-                    <ul class="dropdown">
+                    <div class="dropdown">
                         <div class="dropbtn">ENGLISH <i class="fa arrow-icon fa-arrow-down" aria-hidden="true"></i></div>
-                        <div class="dropdown-content">
+                        <ul class="dropdown-content">
                             <li>
                                    <a href="#">ENGLISH</a>
                            </li>
@@ -44,8 +44,8 @@
                            <li>
                                    <a href="#">RUSSIAN</a>
                            </li>
-                       </div>
-                    </ul>
+                       </ul>
+                    </div>
                 </div>
             </div>
         </div>
