--- a/sec/index.html
+++ b/sec/index.html
@@ -110,7 +110,7 @@
         	</div>
         	<div class="banner-text flex">
         		<h1 class="banner-text-up">ვებ დიზაინი და პროგრამირება</h1>
-        		<h2 class="banner-text-down">სახელი გვარი</h2>
+        		<h2 class="banner-text-down">თორნიკე ფხალაძე</h2>
         	</div>
         </section>
 
