--- a/asigne/index.html
+++ b/asigne/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="header flex ">
-        <div class="width-100">
+        <div class="width-100 heigh-100">
             <div class="head">
                 <div class="flex space-betwen width-100 align-center m-5">
                     <ul class="left-block">
