--- a/bet-project/index.html
+++ b/bet-project/index.html
@@ -25,13 +25,16 @@
                     <li class="nav__lists__item"><a class="rout" href="#">Sin up</a></li>
                     <li class="nav__lists__item"><a class="rout" href="#">Log in</a></li>
                     <li class="nav__lists__item pointer drop">
-                        <i class="fas fa-globe-europe"></i>
-                        English (UK)
-                        <i class="fas fa-angle-down"></i>
-                        <ul class="dropdown">
-                            <li class="dropdown-list-item">ქართული</li>
-                            <li class="dropdown-list-item">Russian</li>
-                        </ul>
+                        <a class="rout" href="">
+
+                            <i class="fas fa-globe-europe"></i>
+                            English (UK)
+                            <i class="fas fa-angle-down"></i>
+                            <ul class="dropdown">
+                                <li class="dropdown-list-item">ქართული</li>
+                                <li class="dropdown-list-item">Russian</li>
+                            </ul>
+                        </a>
                     </li>
 
                 </ul>
